fix: no margin on tablet break

--- a/src/styles/modules/header.scss
+++ b/src/styles/modules/header.scss
@@ -27,10 +27,6 @@
             display: none;
         }
     }
-
-    @include break-down($break-custom-tablet) {
-        margin-bottom: rem(124);
-    }
     
     // mobile
     @include break-down($break-tablet - 50) {
